--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,9 @@
     margin: 0;
     padding: 0;
     background-color: black;
+    font-family: "Noto Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
 }
 
 .videoMain {
@@ -24,21 +27,17 @@
     color: rgb(199, 117, 30);
     display: flex;
     justify-content: center;
-    font-family: "Madimi One", sans-serif;
-    font-weight: 400;
-    font-style: normal;
     font-size: 32px;
+    font-weight: bold;
     padding: 4%;
 }
 
 .secondHeader {
-    color: rgb(96, 95, 95);
+    color: rgb(207, 204, 204);
     padding-top: 4%;
-    font-family: "Madimi One", sans-serif;
-    font-weight: 400;
-    font-style: normal;
     font-size: 23px;
-    padding: 1%;
+    padding: 2%;
+    padding-left: 4%;
 }
 
 .principalContenedor {
@@ -46,18 +45,91 @@
     justify-content: center;
     color: antiquewhite;
     padding: 3%;
-    font-family: "Madimi One", sans-serif;
-    font-weight: 400;
-    font-style: normal;
 }
 
 .principalNumeros {
     display: flex;
-    padding-right: 8%;
-    padding-left: 8%;
+    padding-right: 4%;
+    padding-left: 4%;
     gap: 10px;
 }
 
 .numeros {
     font-size: 60px;
+    padding-right: 80px;
+}
+
+.videoBody {
+    display: flex;
+    justify-content: center;
+}
+
+.proyectos {
+    color: rgb(207, 204, 204);
+    padding-top: 4%;
+    font-size: 23px;
+    padding: 2%;
+    padding-left: 4%;
+}
+
+.proyectosGrid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+    grid-gap: 20px;
+    color: white;
+    padding: 5%;
+}
+
+.proyectosCard {
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    overflow: hidden;
+}
+
+.proyectosCard img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+
+.proyectosInfo {
+    padding: 15px;
+}
+
+.proyectosInfo h2 {
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+
+.proyectosInfo p {
+    font-size: 16px;
+    margin-bottom: 5px;
+}
+
+.proyectosDescripcion {
+    font-size: 14px;
+    color: #666;
+}
+
+footer {
+    background-color: #333;
+    color: #fff;
+    padding: 20px;
+    text-align: center;
+}
+
+.redes-sociales {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1%;
+}
+
+.redes-sociales a {
+    margin-right: 15%;
+    /* Espaciado entre los iconos */
+}
+
+.redes-sociales img {
+    width: 30px;
 }
